# scenario_synthdata_generator

./: .coverage  .gitignore  README.md  data_dictionary_generator.py  generate.py  main.py  pyproject.toml  tui_app.py
artifacts/: Data_dictionary.md  Generate.md  Instrumentation.md  Perf_plan.md  TUI.md
artifacts/test_infra/: Test.md  test_performance.py  test_phase2.py
tests/integration/: test_fast_integration.py
tests/regression/: test_fast_regression.py
tests/unit/: test_category_mapping.py  test_generate.py  test_tui_app.py
